--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -382,7 +382,7 @@
 %
 
 \author{David C. Turner% <-this % stops a space
-\thanks{Manuscript received \pubdate, version \gitid.}%
+\thanks{Manuscript received \pubdate.}%
 \thanks{The author is with the Operations and Planning Systems division of
 Tracsis plc, Leeds LS2 9DF, United Kingdom (email:
 d.turner@tracsis.com)}% <-this % stops a space
