--- a/paxos.bib
+++ b/paxos.bib
@@ -237,3 +237,11 @@ year         = {2005},
  publisher = {Springer-Verlag},
  address = {London, UK, UK},
 } 
+
+
+@TECHREPORT{virt-synch,
+    author = {Ken Birman and Dahlia Malkhi and Robbert van Renesse},
+    title = {Virtually Synchronous Methodology for Dynamic Service Replication},
+    institution = {},
+    year = {2010}
+}
