Remove IEEE from header

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -411,8 +411,8 @@ d.turner@tracsis.com)}% <-this % stops a space
 
 
 % The paper headers
-\markboth{IEEE Transactions on Parallel and Distributed Systems,~Vol.~?, No.~?,
-?~? Draft \gitid}%TODO Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
+%\markboth{IEEE Transactions on Parallel and Distributed Systems,~Vol.~?, No.~?, %?~? Draft \gitid}{Turner: \mytitle}%
+\markboth{Unbounded Pipelining in Dynamically Reconfigurable Paxos Clusters Draft \gitid}%TODO Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
 {Turner: \mytitle}
 % The only time the second header will appear is for the odd numbered pages
 % after the title page when using the twoside option.
@@ -1487,9 +1487,8 @@ v_i(b_2)$ as required.  \end{proof}
 
 The author would like to thank Leslie Lamport, Dahlia Malkhi and Leander
 Nikolaus Jehl for their encouragement and comments on earlier drafts of this
-paper.
-
-The author is also grateful to Tracsis plc for supporting this work.
+paper. The author is also very grateful to Tracsis plc for supporting this
+work.
 
 
 
