--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -718,7 +718,7 @@ value $v(b)$ associated with the ballot $b$ has been chosen.
 The system satisfies a set of invariants listed in fig.
 \ref{synod-invariants-figure}, from which it follows that consistency is
 guaranteed in the sense that if $\chosen{}{b}$ and $\chosen{}{b'}$ then $v(b) =
-v(b')$ as shown in theorem \ref{synod-safety-theorem} in appendix
+v(b')$ as shown by theorem \ref{synod-safety-theorem} in appendix
 \ref{synod-safety}.
 
 Each node operates as a state machine whose transitions are caused by the
